[tool.poetry]
name = "widget"
version = "0.1.0"
description = ""
authors = ["Nikolai <kolamba.r@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"


[tool.poetry.group.test.dependencies]
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
